--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "author": "Andrey Savchenko <korsap@bk.ru>",
   "license": "MIT",
   "devDependencies": {
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^3.0.6",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "webpack": "3"
   }
 }
