--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "MIT",
   "devDependencies": {
     "compression-webpack-plugin": "^1.1.10",
+    "css-loader": "^0.28.10",
+    "extract-text-webpack-plugin": "^3.0.2",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^3.0.6",
     "progress-bar-webpack-plugin": "^1.11.0",
+    "style-loader": "^0.20.2",
     "webpack": "3",
     "webpack-dev-server": "2",
     "webpack-merge": "^4.1.2"
