--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "html-webpack-plugin": "^3.0.6",
     "progress-bar-webpack-plugin": "^1.11.0",
     "style-loader": "^0.20.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "webpack": "3",
     "webpack-dev-server": "2",
     "webpack-merge": "^4.1.2"
